--- a/config/eyelash_corne.conf
+++ b/config/eyelash_corne.conf
@@ -8,6 +8,8 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
 CONFIG_ZMK_SLEEP=y
 
+CONFIG_ZMK_BLE=y
+CONFIG_ZMK_USB=n
 
 
 
@@ -31,12 +33,12 @@ CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
-# Mouse enable
-CONFIG_ZMK_POINTING=y
+# Mouse disable
+CONFIG_ZMK_POINTING=n
 
 CONFIG_ZMK_BACKLIGHT=y
 CONFIG_ZMK_BACKLIGHT_BRT_START=100
-CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
+CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=n
 # Uncomment the following line to increase the keyboard's wireless range
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
